# Quant-Trading-Bot-QTi-

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  install.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml
QTi/: README.md  create_venv.py  qti.ini  qti.ini.example  requirements.txt  run.py  setup.py  start.sh  Техническое задание.md
QTi/backend/: __init__.py  alembic.ini  config.py  constants.py  crud.py  database.py  dependencies.py  exceptions.py  init_db.py  logger.py  main.py  models.py  requirements.txt  run.py  schemas.py  security.py  utils.py
QTi/backend/api/: alerts.py  api.py  backtest.py  bots.py  config.py  deps.py  exchanges.py  market.py  monitor.py  optimizer.py  websocket.py
QTi/backend/core/: api_key.py  backtest.py  backup.py  cache.py  config.py  config_manager.py  database.py  deps.py  exchange.py  logger.py  market_data.py  market_maker.py  monitor.py  monitoring.py  notifications.py  optimizer.py  passivbot.py  qti_bot.py  qti_bot_manager.py  remote_sync.py  rust_integration.py  security.py  strategies.py  strategy.py  technical_analysis.py  testing.py  websocket.py
QTi/backend/crud/: __init__.py  api_key.py  base.py  exchange.py  strategy.py  trade.py  user.py
QTi/backend/migrations/: env.py
QTi/backend/models/: __init__.py  alert.py  api_key.py  base.py  exchange.py  strategy.py  trade.py  user.py
QTi/backend/routers/: auth.py  backtest.py  bots.py  market.py  optimize.py  servers.py  settings.py
QTi/backend/schemas/: __init__.py  api_key.py  auth.py  backtest.py  base.py  bot.py  exchange.py  market.py  optimization.py  optimize.py  server.py  strategy.py  trade.py  user.py
QTi/backend/services/: alert_service.py  api.py  auth.py  auth_service.py  backtest.py  backtest_manager.py  bot.py  bot_manager.py  cache.py  database.py  exchange_service.py  market.py  market_data.py  market_maker.py  market_service.py  optimization.py  optimize_manager.py  optimizer.py  remote_manager.py  server.py  server_manager.py  websocket.py
QTi/backend/strategies/: bollinger_bands_strategy.py  macd_strategy.py  moving_average_crossover.py  rsi_strategy.py
QTi/backend/tests/: conftest.py  test_alert_api.py  test_alert_models.py  test_alert_service.py  test_api.py  test_api_integration.py  test_auth.py  (+50 more)
QTi/frontend/: .eslintrc.json  TESTING.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
backend/: main.py
frontend/: index.html  package.json  script.js  server.py
frontend-next/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend-next/.next/: trace
frontend/pages/: index.js
(+352 files in other folders)
