[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qti"
version = "0.1.0"
description = "QTi - Trading Intelligence Platform"
authors = [
    {name = "QTi Team", email = "team@qti.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # FastAPI и зависимости
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    
    # База данных
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",
    
    # HTTP клиент
    "aiohttp>=3.9.3",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    
    # Работа с данными
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "joblib>=1.3.2",
    
    # Биржи и торговля
    "python-binance>=1.0.19",
    "ccxt>=4.2.15",
    "ta>=0.10.2",
    
    # Утилиты
    "websockets>=12.0",
    "rclone-python>=0.1.0",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.8",
    "aiofiles>=23.2.1",
    "redis>=5.0.1",
    "paramiko>=3.4.0",
    "python-socketio>=5.11.1",
    "maturin>=1.4.0",
    "pyo3>=0.20.0",
]

[project.optional-dependencies]
dev = [
    # Тестирование
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    
    # Документация
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    
    # Линтинг и форматирование
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=qti --cov-report=term-missing"
asyncio_mode = "auto" 